--- a/SkyBetufi/SourceCode/SkySrc/AppUI/ModuleFilm/SkyBallHetiRedFilmHome.storyboard
+++ b/SkyBetufi/SourceCode/SkySrc/AppUI/ModuleFilm/SkyBallHetiRedFilmHome.storyboard
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="FLw-AM-qZp">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="FLw-AM-qZp">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Film Home View Controller-->
+        <!--Glod BuleHT Film Home View Controller-->
         <scene sceneID="kFT-RG-HvM">
             <objects>
                 <viewController id="FLw-AM-qZp" customClass="GlodBuleHTFilmHomeViewController" sceneMemberID="viewController">
@@ -19,10 +18,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="mb4-8d-Tbc">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <color key="backgroundColor" systemColor="secondarySystemGroupedBackgroundColor"/>
                             </tableView>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="hYJ-Ob-Hvl"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="mb4-8d-Tbc" firstAttribute="leading" secondItem="hYJ-Ob-Hvl" secondAttribute="leading" id="Hjq-pN-cV7"/>
@@ -30,7 +30,6 @@
                             <constraint firstItem="hYJ-Ob-Hvl" firstAttribute="bottom" secondItem="mb4-8d-Tbc" secondAttribute="bottom" id="jfe-2Z-Yd5"/>
                             <constraint firstItem="hYJ-Ob-Hvl" firstAttribute="trailing" secondItem="mb4-8d-Tbc" secondAttribute="trailing" id="mIH-Uu-9tx"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="hYJ-Ob-Hvl"/>
                     </view>
                     <connections>
                         <outlet property="tableView" destination="mb4-8d-Tbc" id="th7-Lr-mEY"/>
@@ -41,4 +40,9 @@
             <point key="canvasLocation" x="-63" y="74"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="secondarySystemGroupedBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
